// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Hamburger /> Should match snapshot with props: default 1`] = `
.c0 {
  display: inline-block;
  position: relative;
  width: 24px;
  height: 24px;
}

.c1 {
  color: #ffffff;
}

<div
  aria-live="polite"
  className="c0"
>
  <svg
    aria-hidden="true"
    className="MuiSvgIcon-root c1"
    focusable="false"
    inverted={false}
    role="presentation"
    viewBox="0 0 24 24"
  >
    <path
      d="M0 0h24v24H0z"
      fill="none"
    />
    <path
      d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
    />
  </svg>
</div>
`;

exports[`<Hamburger /> Should match snapshot with props: inverted 1`] = `
.c0 {
  display: inline-block;
  position: relative;
  width: 24px;
  height: 24px;
}

.c1 {
  color: #191919;
}

<div
  aria-live="polite"
  className="c0"
>
  <svg
    aria-hidden="true"
    className="MuiSvgIcon-root c1"
    focusable="false"
    inverted={true}
    role="presentation"
    viewBox="0 0 24 24"
  >
    <path
      d="M0 0h24v24H0z"
      fill="none"
    />
    <path
      d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
    />
  </svg>
</div>
`;

exports[`<Hamburger /> Should match snapshot with props: inverted and isOpened 1`] = `
.c0 {
  display: inline-block;
  position: relative;
  width: 24px;
  height: 24px;
}

.c1 {
  color: #191919;
}

<div
  aria-live="polite"
  className="c0"
>
  <svg
    aria-hidden="true"
    className="MuiSvgIcon-root c1"
    focusable="false"
    inverted={true}
    role="presentation"
    viewBox="0 0 24 24"
  >
    <path
      d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
    />
    <path
      d="M0 0h24v24H0z"
      fill="none"
    />
  </svg>
</div>
`;

exports[`<Hamburger /> Should match snapshot with props: inverted and showNotification 1`] = `
.c0 {
  display: inline-block;
  position: relative;
  width: 24px;
  height: 24px;
}

.c1 {
  position: absolute;
  width: 7px;
  height: 7px;
  border: solid 2px #ffffff;
  top: 0;
  right: 0;
  border-radius: 7px;
  background-color: #e91b0c;
}

.c2 {
  color: #191919;
}

<div
  aria-live="polite"
  className="c0"
>
  <span
    aria-label="There are new notifications"
    className="c1"
  />
  <svg
    aria-hidden="true"
    className="MuiSvgIcon-root c2"
    focusable="false"
    inverted={true}
    role="presentation"
    viewBox="0 0 24 24"
  >
    <path
      d="M0 0h24v24H0z"
      fill="none"
    />
    <path
      d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
    />
  </svg>
</div>
`;

exports[`<Hamburger /> Should match snapshot with props: inverted, showNotification and isOpened 1`] = `
.c0 {
  display: inline-block;
  position: relative;
  width: 24px;
  height: 24px;
}

.c1 {
  color: #191919;
}

<div
  aria-live="polite"
  className="c0"
>
  <svg
    aria-hidden="true"
    className="MuiSvgIcon-root c1"
    focusable="false"
    inverted={true}
    role="presentation"
    viewBox="0 0 24 24"
  >
    <path
      d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
    />
    <path
      d="M0 0h24v24H0z"
      fill="none"
    />
  </svg>
</div>
`;

exports[`<Hamburger /> Should match snapshot with props: isOpened 1`] = `
.c0 {
  display: inline-block;
  position: relative;
  width: 24px;
  height: 24px;
}

.c1 {
  color: #ffffff;
}

<div
  aria-live="polite"
  className="c0"
>
  <svg
    aria-hidden="true"
    className="MuiSvgIcon-root c1"
    focusable="false"
    inverted={false}
    role="presentation"
    viewBox="0 0 24 24"
  >
    <path
      d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
    />
    <path
      d="M0 0h24v24H0z"
      fill="none"
    />
  </svg>
</div>
`;

exports[`<Hamburger /> Should match snapshot with props: showNotification 1`] = `
.c0 {
  display: inline-block;
  position: relative;
  width: 24px;
  height: 24px;
}

.c1 {
  position: absolute;
  width: 7px;
  height: 7px;
  border: solid 2px #000000;
  top: 0;
  right: 0;
  border-radius: 7px;
  background-color: #e91b0c;
}

.c2 {
  color: #ffffff;
}

<div
  aria-live="polite"
  className="c0"
>
  <span
    aria-label="There are new notifications"
    className="c1"
  />
  <svg
    aria-hidden="true"
    className="MuiSvgIcon-root c2"
    focusable="false"
    inverted={false}
    role="presentation"
    viewBox="0 0 24 24"
  >
    <path
      d="M0 0h24v24H0z"
      fill="none"
    />
    <path
      d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
    />
  </svg>
</div>
`;

exports[`<Hamburger /> Should match snapshot with props: showNotification and isOpened 1`] = `
.c0 {
  display: inline-block;
  position: relative;
  width: 24px;
  height: 24px;
}

.c1 {
  color: #ffffff;
}

<div
  aria-live="polite"
  className="c0"
>
  <svg
    aria-hidden="true"
    className="MuiSvgIcon-root c1"
    focusable="false"
    inverted={false}
    role="presentation"
    viewBox="0 0 24 24"
  >
    <path
      d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
    />
    <path
      d="M0 0h24v24H0z"
      fill="none"
    />
  </svg>
</div>
`;
